--- a/webfund/plotblock/css/style.css
+++ b/webfund/plotblock/css/style.css
@@ -4,7 +4,7 @@
         padding: 10px;
    }
    #wrapper{
-    width: 950px;
+    width: 1050px;
     background-color: silver;
     margin: 0px auto;
    }
@@ -20,8 +20,9 @@
    }
    #main_content{
        display: inline-block;
+       vertical-align: top;
     min-height: 400px;
-    width: 700px;
+        width: 700px;
     background-color: red;
    }
    .subcontents{
