--- a/webfund/portfolio/style.css
+++ b/webfund/portfolio/style.css
@@ -10,6 +10,11 @@
         min-height: 300px
     }
 
+    .gradientheader{
+        background-image: linear-gradient(silver, darkgray, silver);
+        color: white;
+    }
+
     #top{
         background-color: red;
     }
@@ -33,7 +38,7 @@
         display: inline-block;
         width: 495px;
         height: 50px;
-        background-color: green;
+        background-color: pink;
         vertical-align: top;
     }
 
@@ -41,5 +46,29 @@
         display: inline-block;
         width: 495px;
         height: 50px;
-        background-color: pink;
+
+    }
+
+    #mainbottomleft{
+        vertical-align: top;
+        display: inline-block;
+        width: 300px;
+        height: 500px;
+
+    }
+
+    #mainbottomcenter{
+        vertical-align: top;
+        display: inline-block;
+        width: 300px;
+        height: 500px;
+
+    }
+
+    #mainbottomright{
+        vertical-align: top;
+        display: inline-block;
+        width: 300px;
+        height: 500px;
+
     }
