--- a/webfund/portfolio/style.css
+++ b/webfund/portfolio/style.css
@@ -6,7 +6,7 @@
     
     .wrapper{
         background-color: lightgray;
-        width: 1000px;
+        width: 920px;
         min-height: 300px
     }
 
@@ -15,15 +15,26 @@
         color: white;
     }
 
+    .pinkdiv{
+        display: inline-block;
+        width: 58px;
+        height: 58px;
+        background-color: pink;
+    }
+
+    .descbox{
+        height: 150px;;
+    }
+
     #top{
-        background-color: red;
+        background-color: #f8f8f8;
+
     }
 
     #topleft{
         display: inline-block;
         width: 495px;
         height: 50px;
-        background-color: green;
         vertical-align: top;
     }
 
@@ -31,44 +42,85 @@
         display: inline-block;
         width: 495px;
         height: 50px;
-        background-color: pink;
     }
+    
+    #main{
+    background-image: radial-gradient(#6f5964, #1b0b0f, #1b0b0f);
+        height: 850px;
+    }
+
+    #maintop{
+        height: 300px;
+        padding-bottom: 10px;
+
+    }
+
+    #mainbottom{
+        height: 700px;
+        padding-top: 10px;   
+    
+    }
+
 
     #maintopleft{
         display: inline-block;
-        width: 495px;
-        height: 50px;
-        background-color: pink;
+        width: 390px;
+        height: 260px;
+        background-color: #ded1dd;
         vertical-align: top;
+        margin: 20px;
+    }
+
+    #maintopleft img{
+        padding: 5px;
+    
+    
     }
 
     #maintopright{
         display: inline-block;
-        width: 495px;
-        height: 50px;
+        width: 455px;
+        height: 260px;
+        vertical-align: top;
+        margin: 10px;
+        background-color: #ded1dd;
+    }
 
+    #maintopright p{
+        margin-top: 15px;
+        margin-bottom: 15px;
+
+    }    
+
+
+
+    #mainbottom p{
+        height: 150px;
     }
 
     #mainbottomleft{
+        margin: 10px;
         vertical-align: top;
         display: inline-block;
-        width: 300px;
+        width: 310px;
         height: 500px;
-
+        background-color: #ded1dd;
     }
 
     #mainbottomcenter{
+        margin: 10px;
         vertical-align: top;
         display: inline-block;
-        width: 300px;
+        width: 310px;
         height: 500px;
-
+        background-color: #ded1dd;
     }
 
     #mainbottomright{
+        margin: 10px;
         vertical-align: top;
         display: inline-block;
-        width: 300px;
+        width: 310px;
         height: 500px;
-
+        background-color: #ded1dd;
     }
