--- a/webfund/portfolio/style.css
+++ b/webfund/portfolio/style.css
@@ -5,7 +5,7 @@
     }
     
     .wrapper{
-        background-color: lightgray;
+        background-color: #fafafa;
         width: 920px;
         min-height: 300px
     }
@@ -32,6 +32,12 @@
         text-align:center;
     }
 
+    .italund{
+        font-family: Arial, Helvetica, sans-serif;
+        font-style: italic;
+        text-decoration: underline;
+    }
+
     button {
         font-weight: bold;
         padding: 5px;
@@ -44,26 +50,37 @@
     }
 
     #top{
-        background-color: #f8f8f8;
+        background-color: #f3f3f3;
 
     }
 
     #topleft{
         display: inline-block;
-        width: 495px;
-        height: 50px;
+        padding-left: 20px;
+        width: 450px;
+        height: 60px;
+        line-height: 50px;
         vertical-align: top;
+        font-family: "Comic Sans MS", cursive, sans-serif;
+        font-weight: bold;
+        font-size: 28px;
     }
 
     #topright{
         display: inline-block;
-        width: 495px;
-        height: 50px;
+        padding-left: 70px;
+        width: 345px;
+        height: 60px;
+        line-height: 50px;
+        vertical-align: top;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 20px;
     }
     
     #main{
     background-image: radial-gradient(#6f5964, #1b0b0f, #1b0b0f);
-        height: 850px;
+        height: 852px;
     }
 
     #maintop{
@@ -87,7 +104,7 @@
         display: inline-block;
         width: 390px;
         height: 260px;
-        background-color: #ded1dd;
+        background-color:linear-gradient(to right, red , yellow);
         vertical-align: top;
         margin: 20px;
     }
@@ -105,11 +122,16 @@
         vertical-align: top;
         background-color: #ded1dd;
         margin-top: 20px;
+        background-image: linear-gradient(to right, white , #daccd9);
     }
 
     #maintopright p{
         margin-top: 15px;
         margin-bottom: 15px;
+        font-family: Arial, Helvetica, sans-serif;
+        padding-left: 5px;
+        font-size: 15.5px;
+                background-image: linear-gradient(to right, white , #daccd9);
 
     }    
 
@@ -121,7 +143,17 @@
         font-size: 13px;
     }
 
+
+    
     #mainbottom h3{
+        padding-left: 10px;
+        height: 40px;
+        line-height: 40px;
+        vertical-align: middle;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #mainbottom h4{
         padding-left: 10px;
         height: 40px;
         line-height: 40px;
@@ -137,7 +169,7 @@
         display: inline-block;
         width: 275px;
         height: 525px;
-        background-color: #ded1dd;
+        background-image: linear-gradient(to right, white , #daccd9);
     }
 
     #mainbottomcenter{
@@ -147,7 +179,8 @@
         display: inline-block;
         width: 275px;
         height: 525px;
-        background-color: #ded1dd;
+        background-image: linear-gradient(to right, white , #daccd9);
+
     }
 
     #mainbottomright{
@@ -157,7 +190,8 @@
         display: inline-block;
         width: 275px;
         height: 525px;
-        background-color: #ded1dd;
+        background-image: linear-gradient(to right, white , #daccd9);
+
     }
 
     #mblgrid{
@@ -173,4 +207,22 @@
         margin-left: 20px;
         margin-top: 15px;
     }
+
+    #footer{
+        background-color: #f8f8f8;
+        height: 65px;;
+    }
+
+    #footer p{
+        height: 29px;
+        line-height: 29px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        vertical-align: middle;
+    }
+
+    #footer img{
+        vertical-align: middle;
+    }
+
 
