--- a/webfund/aboutpython/css/style.css
+++ b/webfund/aboutpython/css/style.css
@@ -129,6 +129,7 @@
     }
 
     #tBtop{
+        text-align: center;
         width: 565px;
         height: 80px;
         margin-left: 7px;
@@ -138,6 +139,7 @@
     }
 
     .TOCLine{
+        text-align: center;
         display: block;
         margin-bottom: 9px;        
         width: 160px;
@@ -166,6 +168,7 @@
         font-style: italic;
         color: yellow;
         padding-top: 6px;
+        text-align: center;
     }
 
     #tBmiddle p{
@@ -177,6 +180,7 @@
         font-size: 16px;
         color: white;
         padding-top: 6px;
+        text-align: center;
     }
 
     #tBbottom p{
@@ -217,6 +221,7 @@
     }
 
     .mPStyling{
+        text-align: center;
         margin-top: 5px;
         font-size: 13px;        
     }
@@ -285,10 +290,32 @@
         list-style-type: square;
     }
 
-
     #footer{
         height: 95px;
         border-top: 1px solid #6886a0;
         background-image: linear-gradient(#245076, #3374ac);
     }
 
+    #footline1{
+        margin-top: 30px;
+        margin-left: 210px;
+    }
+
+    .footstyle1{
+        display: inline;
+        margin-right: 35px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #669ac8;     
+        font-size: 16px;   
+    }
+
+    #footline2{
+        margin-top: 30px;
+        margin-left: 413px;
+    }
+
+    .footstyle2{
+        font-family: Arial, Helvetica, sans-serif;
+        color: #669ac8;     
+        font-size: 10px;   
+    }
