--- a/webfund/theinternet/css/style.css
+++ b/webfund/theinternet/css/style.css
@@ -1,10 +1,71 @@
 /*CSS reset settings here*/
-*{
-        margin: 10px;
-        padding: 10px;
-   }
-   #wrapper{
-    width: 1050px;
-    background-color: silver;
-    margin: 0px auto;
-   }
+    *{
+        margin: 0px;
+        padding: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #wrapper{
+        width: 750px;
+        height: 630px;
+    }
+
+    #top{
+        width: 750px;
+        height: 110px;
+    }
+
+    #topline1{
+        width: 750px;
+        height: 65px;
+        font-size: 36px;
+    }
+
+    #topline2{
+        width: 750px;
+        height: 38px;
+        font-size: 24px;
+        padding-left: 10px;
+        padding-top: 7px;
+        background-image: linear-gradient(#23659e, #477ca9, #23659e);
+        color: white;
+    }
+
+    #toplinetext{
+        vertical-align: top;
+        line-height: 80px;
+        padding-top: 15px;
+        margin-left: 0px;
+        padding-left: 0px;
+    }
+
+    #toplinespan{
+        vertical-align: top;
+        color: #22659e;
+    }
+
+
+
+
+
+
+
+
+
+
+
+    #sidebar{
+        display: inline-block;
+        width: 200px;
+        height: 520px;
+        background-color: aqua;
+        
+    }
+
+    #mainbody{
+        display: inline-block;
+        width: 544px;
+        height: 520px;
+        background-color: blueviolet;
+        
+    }
