--- a/webfund/theinternet/css/style.css
+++ b/webfund/theinternet/css/style.css
@@ -44,23 +44,111 @@
         color: #22659e;
     }
 
-
-
-
-
-
-
-
-
-
-
     #sidebar{
+        vertical-align: top;
+        margin-top: 1px;
+        margin-left: 1px;
         display: inline-block;
-        width: 200px;
+        width: 198px;
         height: 520px;
-        background-color: aqua;
+    }
+
+    #sbtop{
+        height: 152px;
+        width: 158px;
+        border-bottom: 1px solid #afafaf;
+    }
+
+    #sbparagraph1{
+        font-size: 13px;
+        font-weight: bold;
+        margin-left: 3px;
+        margin-top: 17px;
+    }
+
+    #sbparagraph2{
+        width: 155px;
+        font-size: 11px;
+        font-weight: bold;
+        margin-left: 3px;
+        margin-top: 7px;
+    }
+
+    #sbbutton1{
+        margin-top: 15px;
+        margin-left: 3px;
+        font-weight: bold;
+        width: 150px;
+        height: 30px;
+        border-radius: 5px;
+        color: white;
+        background-color: #3674a9;
+        box-shadow: 1px 1px 1px #888888;
+    }
+
+    #sbbutton2{
+        margin-left: 3px;
+        font-weight: bold;
+        width: 150px;
+        height: 30px;
+        border-radius: 5px;
+        color: white;
+        background-color: #ee8300;
+        box-shadow: 1px 1px 1px #888888;
+    }
+
+    #sbbottom{
+        margin-top: 20px;
+        background-image: url("../img/ad_background.png");
+        width: 158px;
+        height: 235px;
+
+    }
+
+    #sbtext{
+        padding-top: 13px;
+        color: white;
+        font-size: 19px;
+        text-align: center;
+    }
+
+    #sbimage{
+        margin-top: 5px;
+        margin-left: 43px;
+    }
+
+    #sbbutton3{
+        margin-left: 9px;
+        margin-top: 8px;
+        font-weight: bold;
+        width: 140px;
+        height: 24px;
+        border-radius: 5px;
+        border-width: 0px;
+        border-color: black;
+        color: white;
+        background-color: #00c2df;
+        box-shadow: 1px 1px 1px black;
+    }
+
+    #arrow1{
+        font-size: 8px;
+        color:#80dbea;
+
+    }
+
+    #arrow2{
+        font-size: 8px;
+        color: #81dcea;
         
     }
+
+    #arrow3{
+        font-size: 8px;
+        color: #8ddfec
+        
+    }
+
 
     #mainbody{
         display: inline-block;
@@ -68,4 +156,12 @@
         height: 520px;
         background-color: blueviolet;
         
+    }
+
+    .redtext{
+        color: red;
+    }
+
+    .bluetext{
+        color: #2869a0;
     }
