--- a/webfund/belt-exam/css/style.css
+++ b/webfund/belt-exam/css/style.css
@@ -6,12 +6,12 @@
     }
 
     #wrapper{
-        width: 1000px;
+        width: 950px;
         /* background-color: silver; */
     }
 
     #top{
-        width:998px;
+        width:948px;
         height: 69px;
         border-radius: 5px;   
         background-image: linear-gradient(#f8f8f8, #e7e7e7, #e0e0e0);
@@ -21,7 +21,7 @@
 
     #topmenubar{
         vertical-align: top;
-        width: 650px;
+        width: 600px;
         height: 67px;
         display: inline-block;
         /* border: 1px solid gray; */
@@ -65,11 +65,32 @@
         width: 320px;
         height: 67px;
         display: inline-block;
-        border: 1px solid gray;        
+ 
+    }
+
+    #searchtext{
+        display: inline-block;
+        margin-left: 100px;
+        margin-top: 19px;
+        border: 1px solid lightgray;  
+        border-radius: 15px 0px 0px 15px;
+        height: 27px;        
+        width:  175px;
+    }
+
+    #searchbutton{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 19px;
+        height: 28px;   
+        width: 32px;  
+        background-repeat: no-repeat;
+        background-image: url("../img/menu_icon2.png");
+
     }
 
     #middle{
-        width:998px;
+        width:948px;
         height: 400px;
         border: 1px solid gray;
 
@@ -77,7 +98,7 @@
     }
 
     #bottom{
-        width:998px;
+        width:948px;
         height: 500px;
         border: 1px solid gray;
 
