--- a/webfund/belt-exam/css/style.css
+++ b/webfund/belt-exam/css/style.css
@@ -90,11 +90,43 @@
     }
 
     #middle{
+        margin-top: 15px;
         width:948px;
-        height: 400px;
+        height: 399px;
         border: 1px solid gray;
 
 
+
+    }
+
+    #middletop{
+        width:948px;
+        height: 399px;
+        background-image: url("../img/main.png");
+        background-repeat: no-repeat;
+        background-size: 948px 399px;
+    }
+
+    #middlebottom{
+        width:948px;
+        height: 38px;
+
+        background-image: linear-gradient(#535353, #474747, #353535);
+        border-radius: 0px 0px 5px 5px;
+
+    }
+
+    #textcontainer{
+        padding-top: 10px;
+        padding-left: 20px;
+    }
+
+    .middlebottomtext{
+        vertical-align: top;        
+        line-height: 20px;
+        margin: 0px 10px 0px 10px;
+        padding-top: 10px;
+        font-size: 13px;
     }
 
     #bottom{
@@ -102,5 +134,18 @@
         height: 500px;
         border: 1px solid gray;
 
+    }
+
+
+    .colorwhite{
+        color: white;
+    }
+
+    .colorblue{
+        color: lightblue;
+    }
+
+    .colorgray{
+        color: gray;
     }
 
