--- a/webfund/belt-exam/css/style.css
+++ b/webfund/belt-exam/css/style.css
@@ -130,10 +130,185 @@
     }
 
     #bottom{
-        width:948px;
-        height: 500px;
-        border: 1px solid gray;
+        margin-top: 55px;
+        width:946px;
+        height: 516px;
+        border: 2px solid lightgray;
+        border-radius: 7px;
 
+    }
+
+    #botrow1{
+        margin-top: 30px;
+        height: 60px;
+        width: 948px;
+        border-bottom: 2px solid lightgray;
+    }
+
+    #br1left{
+        display: inline-block;
+        height: 40px;
+        width: 570px;
+        border-right: 2px solid lightgray;
+    }
+
+    #br1right{
+        display: inline-block;
+        vertical-align: top;
+        height: 40px;
+        width: 170px;
+
+    }
+
+    #br1button{
+        margin-left: 25px;
+        height: 40px;
+        width: 310px;
+        background-color: #4f90c0;
+        color: white;
+        font-size: 20px;
+        border-radius: 7px;
+    }
+
+    #br1label{
+        vertical-align: text-bottom;
+        line-height: 30px;
+        padding-left: 30px;
+        margin-top: 10px;
+        width: 300px;
+        height: 100px;;
+        color: lightgray;
+        font-size: 32px;
+    }
+
+    #botrow2{
+        height: 366px;
+        width: 946px;
+        background-color: #f4f4f4;
+        border-bottom: 2px solid lightgray;
+    }
+
+    #br2box1{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 310px;
+        width: 210px;
+        border-right: 1px solid lightgray;
+    }
+
+    #box1imglabel{
+        vertical-align: top;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 10px;
+
+    }
+
+    #box1paragraph{
+        margin-top: 24px;
+        font-size: 13px;
+        margin-bottom: 8px;
+    }
+
+    #br2box2{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 310px;
+        width: 210px;
+        border-right: 1px solid lightgray;
+
+        
+    }
+
+    #box2imglabel{
+        vertical-align: top;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 10px;
+
+    }
+
+    #box2paragraph{
+        margin-top: 24px;
+        font-size: 13px;
+        margin-bottom: 8px;
+    }
+
+
+
+    #br2box3{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 310px;
+        width: 210px;
+        border-right: 1px solid lightgray;
+
+        
+    }
+
+    #box3imglabel{
+        vertical-align: top;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 10px;
+
+    }
+
+    #box3paragraph{
+        margin-top: 24px;
+        font-size: 13px;
+        margin-bottom: 8px;
+    }
+
+    #br2box4{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 310px;
+        width: 210px;
+
+        
+    }
+
+    #box4imglabel{
+        vertical-align: top;
+        font-weight: bold;
+        font-size: 18px;
+        margin-left: 10px;
+
+    }
+
+    #box4paragraph{
+        margin-top: 24px;
+        font-size: 13px;
+        margin-bottom: 24px;
+    }
+
+    #footer{
+        width:948px;
+        height: 400px;
+        border: 1px solid lightgray;
+    }
+
+    .br2button{
+        width: 210px;
+        height: 35px;
+        background-color: #5fabef;
+        border-radius: 4px;
+        color: white;
+        font-size: 14px;
+        margin-top: 4px;
     }
 
 
