--- a/webfund/belt-exam/css/style.css
+++ b/webfund/belt-exam/css/style.css
@@ -15,7 +15,6 @@
         height: 69px;
         border-radius: 5px;   
         background-image: linear-gradient(#f8f8f8, #e7e7e7, #e0e0e0);
-     
         border: 1px solid gray;
     }
 
@@ -65,8 +64,7 @@
         width: 320px;
         height: 67px;
         display: inline-block;
- 
-    }
+     }
 
     #searchtext{
         display: inline-block;
@@ -83,10 +81,11 @@
         vertical-align: top;
         margin-top: 19px;
         height: 28px;   
-        width: 32px;  
+        width: 28px;  
         background-repeat: no-repeat;
         background-image: url("../img/menu_icon2.png");
-
+        background-position: center;
+        background-size: cover;
     }
 
     #middle{
@@ -133,6 +132,7 @@
         margin-top: 55px;
         width:946px;
         height: 516px;
+        background-color: #f4f4f4;
         border: 2px solid lightgray;
         border-radius: 7px;
 
@@ -295,10 +295,81 @@
         margin-bottom: 24px;
     }
 
-    #footer{
+    #footertop{
         width:948px;
-        height: 400px;
-        border: 1px solid lightgray;
+        height: 250px;
+        border-bottom: 1px solid lightgray;
+    }
+
+    #foot1{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        margin-left: 3px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #foot2{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #foot3{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #foot4{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #foot5{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #foot6{
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 35px;
+        width: 150px;
+        height: 300px        
+    }
+
+    #bottomline{
+        margin-left: 2px;
+        margin-top: 20px;
+        font-size: 12px;        
+    }
+
+    #bottomemail{
+        color: blue;
+        text-decoration: underline;
+    }
+
+    .footheader{
+        font-weight: bold;
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .foottext{
+        font-size: 12px;
+        margin-top: 11px;
     }
 
     .br2button{
@@ -324,3 +395,7 @@
         color: gray;
     }
 
+    #footerbottom{
+        width:948px;
+        height: 200px;
+    }
