--- a/webfund/disappearingninja/css/style.css
+++ b/webfund/disappearingninja/css/style.css
@@ -19,3 +19,8 @@
         border-radius: 5px;
         box-shadow: 10px 10px 5px grey;
     }
+
+    img{
+        width: 300px;
+        height: 300px;
+    }
