--- a/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
+++ b/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
@@ -89,7 +89,7 @@
             </form>
         </div>
 
-        <div class="rightsection">
+        <div class="rightsection bordered">
             <p class="centered-text">Welcome to Dojo Fruit Store!</p>
             <br>
             <p class="padded centered-text">Your dojo decided to buy fruits for all the students! Please use this app
@@ -98,6 +98,5 @@
             <p class="padded centered-text">Dojo Fruit Store is proudly built using Flask.</p>
             </p>
         </div>
-
     </div>
 </body>
