--- a/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
+++ b/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
@@ -78,11 +78,11 @@
                 <br>
                 <table>
                     <tr>
-                        <td>Name:</td>
+                        <td class="form-control" >Name:</td>
                         <td><input class="form-control" type='text' name='name'></td>
                     </tr>
                     <tr>
-                        <td>Your Student ID:</td>
+                        <td class="form-control" >Your Student ID:</td>
                         <td><input class="form-control" type='text' name='student_id'></td>
                     </tr>
                 </table>
