button styling change

--- a/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
+++ b/python_stack/flask_fundamentals/dojofruitstore/templates/index.html
@@ -88,7 +88,7 @@
                 </table>
                 <br>
                 <br>
-                <input type='submit' value='Buy me stuff!'>
+                <input type='submit' value='Buy me stuff!' class="btn btn-primary btn-lg">
             </form>
         </div>
 
