--- a/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
+++ b/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
@@ -5,10 +5,23 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-image: url('/static/gold-coin-pile.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
 .toplevelcontainer {
     width: 1250px;
     height: 1000px;
     margin-top: 50px;
+}
+
+.headerdiv {
+    padding: 5px;
+    background-color: white;
+    box-shadow: 5px 5px 5px gray;
+    border-radius: 5px;    
 }
 
 .inlineblock {
@@ -27,11 +40,12 @@
 .choicediv {
     display: inline-block;
     border: solid 1px black;
-    margin-right: 20px;
+    margin: 10px;
     padding: 15px;
     width: 180px;
-    box-shadow: 5px 5px;
+    box-shadow: 5px 5px 5px gray;
     border-radius: 5px;
+    background-color: white;
 }
 
 .goldtotal {
@@ -46,13 +60,20 @@
     display: none;
 }
 
+.turnlogdiv {
+    background-color: white;
+    margin: 20px;
+    padding: 10px;
+    box-shadow: 5px 5px 5px gray;
+    border-radius: 5px;    
+}
+
 .turnlog {
     display: block;
     height: 200px;
     border: 1px solid black;
-    box-shadow: 5px 5px;
-    border-radius: 5px;
     overflow: scroll;
+    background-color: white;
 }
 
 .labeldiv {
@@ -84,4 +105,5 @@
 .logentry {
     margin: 1px;
     padding: 1px;
+    font-size: 15px;
 }
