--- a/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
+++ b/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
@@ -62,7 +62,7 @@ body {
 
 .turnlogdiv {
     background-color: white;
-    margin: 20px;
+    margin: 0px 20px 20px 20px;
     padding: 10px;
     box-shadow: 5px 5px 5px gray;
     border-radius: 5px;    
