--- a/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
+++ b/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-image: url('/static/gold-coin-pile.jpg');
+    background-repeat: repeat;
     background-size: 100% 100%;
 }
 
