--- a/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
+++ b/python_stack/flask_fundamentals/ninjagoldlab/static/styles/style.css
@@ -44,7 +44,13 @@ body {
     width: 180px;
     box-shadow: 5px 5px 5px gray;
     border-radius: 5px;
-    background-color: white;
+    background-color: lightyellow;
+    opacity: 0.8;
+}
+
+.choicediv:hover {
+    background-color: gold;
+    opacity: 1.0;
 }
 
 .goldtotal {
