--- a/python_stack/flask_fundamentals/registrationformlab/templates/index.html
+++ b/python_stack/flask_fundamentals/registrationformlab/templates/index.html
@@ -1,4 +1,5 @@
 <head>
+    <title>Simple Registration Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
@@ -29,34 +30,8 @@
                     </div>
                     <input type="text" class="form-control" id="fullname" name="fullname">
                 </div>
-                <div class="form-group">
-                    <label for="location">Dojo Location:</label>
-                    <select id="location" name="location">
-                        <option value="San Jose">San Jose</option>
-                        <option value="Seattle">Saab</option>
-                        <option value="Los Angeles">Los Angeles</option>
-                        <option value="Dallas">Dallas</option>
-                        <option value="Tysons Corner">Tysons Corner</option>
-                        <option value="Chicago">Chicago</option>
-                        <option value="Tulsa">Tulsa</option>                        
-                        <option value="Berkeley">Berkeley</option>
-                        <option value="Boise">Boise</option>      
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="favorite_language">Favorite Language:</label>
-                    <select id="favorite_language" name="favorite_language">
-                            <option value="Javascript">Javascript</option>
-                            <option value="Python">Saab</option>
-                            <option value="Java">Python</option>
-                            <option value="C/C++">C/C++</option>
-                            <option value="C#">C#</option>
-                        </select>
-                </div>
-                <div class="form-group">
-                    <label for="comment">Comment (optional):</label>
-                    <textarea class="form-control" id="comment" name="comment" style="height: 250px"></textarea>
-                </div>
+
+
                 <button type="submit" class="btn btn-primary float-right">Submit</button>
             </form>
         </div>
