--- a/python_stack/flask_fundamentals/registrationformlab/templates/index.html
+++ b/python_stack/flask_fundamentals/registrationformlab/templates/index.html
@@ -2,6 +2,7 @@
     <title>Simple Registration Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <!-- jQuery library -->
@@ -14,27 +15,49 @@
 
 <body>
     <div class="topcontainer d-flex justify-content-center">
+        <div class="formcontainer" style="margin-top: 100px; padding: 20px">
+            <form action="/process_form" method="POST">
+                <table>
+                    <tr>
+                        <td class="tableLabel">Email Address:</td>
+                        <td><input class="form-control" type="email" name="emailaddress" size="60" autofocus></td>
+                    </tr>
+                    <tr>
+                        <td class="tableLabel">First Name:</td>
+                        <td><input class="form-control" type="text" name="first_name" size="60"></td>
+                    </tr>
+                    <tr>
+                        <td class="tableLabel">Last Name:</td>
+                        <td><input class="form-control" type="text" name="last_name" size="60"></td>
+                    </tr>
+                    <tr>
+                        <td class="tableLabel">Password:</td>
+                        <td><input class="form-control" type="text" name="password" size="60"></td>
+                    </tr>
+                    <tr>
+                        <td class="tableLabel">Confirm Password:</td>
+                        <td><input class="form-control" type="text" name="confirm_password" size="60"></td>
+                    </tr>
+                    <tr>
+                            <td class="tableLabel"></td>
+                            <td><input type="submit" class="btn btn-primary float-right" value="Submit"></td>
+                    </tr>                    
+                </table>
+                <br>
+                <div>
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <p class="alertred">{{message}}</p>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}                      
 
-        <div class="formcontainer  w-50 border border-primary" style="display: inline-block; margin-top: 100px; padding: 20px">
-            <form action='/result' method='post'>
-                <div class="form-group">
-                    <label for="fullname">Your Name:</label>
-                    <div style="margin-left: 10px; display: inline-block">
-                        {% with messages = get_flashed_messages() %}
-                            {% if messages %}
-                                {% for message in messages %}
-                                <p style="color: red">{{message}}</p>
-                                {% endfor %}
-                            {% endif %}
-                        {% endwith %}
-                    </div>
-                    <input type="text" class="form-control" id="fullname" name="fullname">
-                </div>
-
-
-                <button type="submit" class="btn btn-primary float-right">Submit</button>
+                </div>                    
             </form>
+
         </div>
+  
     </div>
 
 
