--- a/python_stack/flask_fundamentals/registrationformlab/templates/index.html
+++ b/python_stack/flask_fundamentals/registrationformlab/templates/index.html
@@ -32,11 +32,11 @@
                     </tr>
                     <tr>
                         <td class="tableLabel">Password:</td>
-                        <td><input class="form-control" type="text" name="password" size="60"></td>
+                        <td><input class="form-control" type="password" name="password" size="60"></td>
                     </tr>
                     <tr>
                         <td class="tableLabel">Confirm Password:</td>
-                        <td><input class="form-control" type="text" name="confirm_password" size="60"></td>
+                        <td><input class="form-control" type="password" name="confirm_password" size="60"></td>
                     </tr>
                     <tr>
                             <td class="tableLabel"></td>
