--- a/python_stack/flask_mysql/loginregistrationlab/templates/index.html
+++ b/python_stack/flask_mysql/loginregistrationlab/templates/index.html
@@ -18,7 +18,7 @@
                     <p class="sectionheader">Register here!</p>
                     <form action="perform_check" method="POST">
                         <label class="formlabel" for="first_name">First name:</label>
-                        <input type="text" class="form-control tenpxmargin" id="first_name" name="first_name">
+                        <input type="text" class="form-control tenpxmargin" id="first_name" name="first_name" value="{{ first_name }}">
                         {% with errors = get_flashed_messages(category_filter=["fname"]) %}
                             {% if errors %}
                                 <div>
@@ -30,7 +30,7 @@
                         {% endwith %}                        
                         <br>
                         <label class="formlabel" for="last_name">Last name:</label>
-                        <input type="text" class="form-control tenpxmargin" id="last_name" name="last_name">
+                        <input type="text" class="form-control tenpxmargin" id="last_name" name="last_name" value="{{ last_name }}">
                         {% with errors = get_flashed_messages(category_filter=["lname"]) %}
                             {% if errors %}
                                 <div>
@@ -42,7 +42,7 @@
                         {% endwith %}                        
                         <br>
                         <label class="formlabel" for="email">Email:</label>
-                        <input type="text" class="form-control tenpxmargin" id="email" name="email">
+                        <input type="text" class="form-control tenpxmargin" id="email" name="email" value="{{ email }}">
                         {% with errors = get_flashed_messages(category_filter=["emailaddress"]) %}
                             {% if errors %}
                                 <div>
@@ -73,12 +73,12 @@
                 </div>
                 <div class="rightsection">
                     <p class="sectionheader">Login here!</p>                    
-                    <form action="process_login" method="POST">
+                    <form action="login" method="POST">
                         <label class="formlabel" for="first_name">Email:</label>
                         <input type="text" class="form-control tenpxmargin" id="email" name="email">
                         <br>
                         <label class="formlabel" for="first_name">Password:</label>
-                        <input type="text" class="form-control tenpxmargin" id="password" name="password">
+                        <input type="password" class="form-control tenpxmargin" id="password" name="password">
                         <br>
                         <input type="submit" class="btn btn-primary submitbutton" name="submit" value="Submit">
                     </form>
