--- a/python_stack/django_projects/tl_05/apps/session_words/static/session_words/css/style.css
+++ b/python_stack/django_projects/tl_05/apps/session_words/static/session_words/css/style.css
@@ -13,14 +13,12 @@
     .topdiv {
         width: 1200px;
         height: 50px;
-        border: 1px solid black;
         background-color: beige;     
     }
 
     .middlediv {
         width: 1200px;
         height: 500px;
-        border: 1px solid black;
         background-color: beige;           
     }
 
@@ -29,8 +27,46 @@
         vertical-align: top;
         width:595px;
         height: 495px;
-        border: 1px solid black;
         background-color: beige;           
+    }
+
+    .sessionform {
+        padding-left: 25px;
+    }
+
+    .addlabel {
+        margin-top: 10px;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .wordbox {
+        margin: 5px 0px 25px 30px;
+        width: 400px;
+        line-height: 30px;
+        font-size: 25px;
+        border: 2px solid black;
+    }
+
+    .choosecolor {
+        margin-bottom: 10px;
+    }
+
+    .colorradio {
+        margin-left: 20px;
+    }
+
+    .bigcheck {
+        margin-top: 15px;
+        margin-bottom:25px
+    }
+
+    .btnsubmit {
+        width: 150px;
+        height: 25px;
+        font-size: 15px;
+        border: 2px solid black;
+        background-color: #a0c3fd;
     }
 
     .rightsection {
@@ -38,13 +74,37 @@
         vertical-align: top;        
         width: 595px;
         height: 495px;
-        border: 1px solid black;
+        border-left: 3px solid black;
         background-color: beige;           
     }    
+
+    .clearbutton {
+        width: 150px;
+        height: 25px;
+        margin: 25px 50px 25px 0px;
+        font-size: 15px;
+        border: 2px solid black;
+        background-color: #e99898;      
+        float: right;  
+    }
+
+    .plist {
+        margin: 10px;
+    }
+
+    .wordslist {
+        margin: auto;
+        width: 500px;
+        height: 350px;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        border: 1px solid black;
+    }
 
     .bottomdiv {
         width: 1200px;
         height: 50px;
-        border: 1px solid black;
         background-color: beige;     
     }
+
+
