--- a/python_stack/django_projects/tl_07/apps/blogs/templates/form.html
+++ b/python_stack/django_projects/tl_07/apps/blogs/templates/form.html
@@ -6,6 +6,20 @@
         {% load static %}
         <!-- The line above tells Django to be ready to listen for static files -->
         <link rel="stylesheet" href="{% static 'blogs/css/style.css' %}">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+
         <!-- Put the static files in the static folder inside your app.  
             Django collects files within all static folders and puts them within a single folder -->
     </head>
