the wall lab done

--- a/python_stack/django_projects/the_wall_lab/apps/login_registration/templates/index.html
+++ b/python_stack/django_projects/the_wall_lab/apps/login_registration/templates/index.html
@@ -128,7 +128,7 @@
     <div class="tablediv">
         <table class="logintable">
             <tbody>
-                <form action="login_registration/process_login" method="POST">
+                <form action="process_login" method="POST">
                 {% csrf_token %}
                     <tr>
                         <td class="">
