--- a/python_stack/django_projects/the_wall_lab/apps/wall/static/wall/css/style.css
+++ b/python_stack/django_projects/the_wall_lab/apps/wall/static/wall/css/style.css
@@ -35,7 +35,6 @@
     vertical-align: middle;
 
 }
-
 .secondline {
     margin: 20px 0px 20px 20px;
     font-size: 16px;
@@ -101,6 +100,7 @@
 }
 
 .commentbtn {
+    margin-bottom: 30px;
     width: 150px;
     float: right;
     color: white;
