--- a/python_stack/django_projects/the_wall_lab/apps/login_registration/static/login_registration/css/style.css
+++ b/python_stack/django_projects/the_wall_lab/apps/login_registration/static/login_registration/css/style.css
@@ -22,6 +22,11 @@
     font-size: 36px;
 }
 
+.maincontainer {
+    width: 50%;
+    margin: auto;
+}
+
 .secondline {
     margin: 20px 0px 20px 20px;
     font-size: 16px;
